<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context="uk.ac.napier.calculator.MainActivity">

    <EditText
        android:id="@+id/result"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/iceland"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorLink="@android:color/holo_orange_dark"
        android:textSize="64sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/iceland"
        android:textColor="@color/colorAccent"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/newNumber"
        app:layout_constraintEnd_toStartOf="@+id/newNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="auto"
        android:fontFamily="@font/iceland"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="@color/colorAccent"
        android:textColorHighlight="@android:color/holo_orange_dark"
        android:textColorLink="@android:color/holo_orange_dark"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button0"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_0"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@id/buttonDot"
        app:layout_constraintStart_toStartOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_1"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@id/button2"
        app:layout_constraintStart_toStartOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_2"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@id/button3"
        app:layout_constraintStart_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_3"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_4"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_5"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/button6"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_6"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button7"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_7"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_8"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/_9"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="@font/iceland"
        android:text="@string/divide"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/buttonNeg"
        android:layout_width="62dp"
        android:layout_height="132dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="@font/iceland"
        android:text="@string/neg"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/buttonDivide"
        app:layout_constraintTop_toBottomOf="@+id/newNumber"
        tools:text="Neg" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="62dp"
        android:layout_height="132dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="@font/iceland"
        android:text="@string/clear"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/buttonNeg" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="@font/iceland"
        android:text="@string/multiply"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="@font/iceland"
        android:text="@string/minus"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@id/button3"
        app:layout_constraintStart_toStartOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="@font/iceland"
        android:text="@string/plus"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@id/buttonEquals"
        app:layout_constraintStart_toStartOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/dot"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@id/buttonEquals"
        app:layout_constraintStart_toStartOf="@+id/button2" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/iceland"
        android:text="@string/equals"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</android.support.constraint.ConstraintLayout>
